--- a/kerykeion/charts/templates/wheel_only.xml
+++ b/kerykeion/charts/templates/wheel_only.xml
@@ -9,7 +9,7 @@
     preserveAspectRatio="xMidYMid"
     style="background-color: $background_color"
 >
-    <title>$stringTitle | Kerykeion</title>
+    <title>$stringTitle</title>
 
     <!-- Colors -->
     <style kr:node="Theme_Colors_Tag">
