--- a/kerykeion/charts/themes/light.css
+++ b/kerykeion/charts/themes/light.css
@@ -14,11 +14,11 @@
     --kerykeion-color-base-100: #ffffff;
 
     /* Minimalist Chart */
-    --kerykeion-minimalist-planet-ring: #eaeaef;
-    --kerykeion-minimalist-house-ring: #d8d8e0;
-    --kerykeion-minimalist-stroke: #b3b3c0;
-    --kerykeion-minimalist-retrograde: #e0334f;
-    --kerykeion-minimalist-indicator: #8585a0;
+    --kerykeion-minimalist-planet-ring: #f4f4f5;
+    --kerykeion-minimalist-house-ring: #e4e4e7;
+    --kerykeion-minimalist-stroke: #d4d4d8;
+    --kerykeion-minimalist-retrograde: #ff5761;
+    --kerykeion-minimalist-indicator: #a1a1aa;
     --kerykeion-color-info: #00b5ff;
     --kerykeion-color-info-content: #000000;
     --kerykeion-color-success: #00a96e;
