--- a/kerykeion/charts/themes/dark.css
+++ b/kerykeion/charts/themes/dark.css
@@ -19,6 +19,7 @@
     --kerykeion-minimalist-stroke: #384a6b;
     --kerykeion-minimalist-retrograde: #fb7085;
     --kerykeion-minimalist-indicator: #4e607d;
+    --kerykeion-minimalist-zodiac-bg-opacity: 1;
     --kerykeion-color-info: #0ca5e9;
     --kerykeion-color-info-content: #000000;
     --kerykeion-color-success: #2dd4bf;
