--- a/kerykeion/charts/themes/dark-high-contrast.css
+++ b/kerykeion/charts/themes/dark-high-contrast.css
@@ -27,8 +27,8 @@
     --kerykeion-color-error: #fb7085;
 
     /* Zodiac */
-    --kerykeion-color-base-200: #0a1020;
-    --kerykeion-color-base-300: #27303c;
+    --kerykeion-color-base-200: #111a2c;
+    --kerykeion-color-base-300: #233044;
 
     /* ----------- */
     /* Chart Color */
