--- a/kerykeion/charts/themes/dark.css
+++ b/kerykeion/charts/themes/dark.css
@@ -27,8 +27,8 @@
     --kerykeion-color-error: #fb7085;
 
     /* Zodiac */
-    --kerykeion-color-base-200: #0a1020;
-    --kerykeion-color-base-300: #171f2c;
+    --kerykeion-color-base-200: #131c2e;
+    --kerykeion-color-base-300: #1e293b;
 
     /* ----------- */
     /* Chart Color */
